--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_778809_4ure6mjprd.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_780910_j3e68safddo.css">
     <title>小米商城</title>
 </head>
 <body>
@@ -59,6 +61,7 @@
           <div class="fxa">
               <a href=""class="list3">小米八</a>
               <a href=""class="list3">小米MIX 2S</a>
+              <a href=""class="list3 iconfont icon-suosou"></a>
           </div>
           <div class="fxa"></div>
       </div>
@@ -72,21 +75,87 @@
       <a href=""><img src="img/picturefour.jpg" alt=""width="1226px"height="460px"></a>
       <a href=""><img src="img/picturefive.jpg" alt=""width="1226px"height="460px"></a>
       <div class="leftblack">
-          <ul>
-              <li><a href="textlist">手机 电话卡<span class="gt"> ></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-              <li><a href=""><span class="gt"></span></a></li>
-          </ul>
+          <div class="leftblackk">
+                <ul>
+                  <li><a href="gtt"><span class="gt"> 手机 电话卡 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">电视 盒子 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">笔记本 平板 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">家电 插线板 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">出行 穿戴 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">智能 路由器 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">电源 配件 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">个户 儿童 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">耳机 音响 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+                  <li><a href="gtt"><span class="gt">生活 箱包 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>></a></li>
+               </ul>
+           </div>
       </div>
   </div>
   <!--滚动结束-->
+<!--闪购上端开始-->
+<div class="english">
+    <div class="english1">
+        <!--<div class="englishh ">-->
+            <!---->
+            <!---->
+        <!--</div>-->
+        <!--<div class="englishh"></div>-->
+        <!--<div class="englishh"></div>-->
+        <!--<div class="englishh"></div>-->
+        <!--<div class="englishh"></div>-->
+        <!--<div class="englishh"></div>-->
+        <ul>
+            <li>
+                <i class="t iconfont icon-shouji"></i>
+                <a href="" class="tt">选购手机</a>
+            </li>
+            <li>
+                <i class="t iconfont icon-liwu"></i>
+                <a href="" class="tt">企业团购</a>
+            </li>
+            <li>
+                <i class="t iconfont icon-fma"></i>
+                <a href="" class="tt">F码通道</a>
+            </li>
+            <li>
+                <i class="t iconfont icon-shoujiqia"></i>
+                <a href="" class="tt">不限量卡</a>
+            </li>
+            <li>
+                <i class="t iconfont icon-yijiuhuanxin"></i>
+                <a href="" class="tt">以旧换新</a>
+            </li>
+            <li>
+                <i class="t iconfont icon-huafeichongzhi"></i>
+                <a href="" class="tt">话费充值</a>
+            </li>
+        </ul>
+    </div>
+
+        <!--<div class="english4">-->
+            <!--<ul>-->
+                <!--<li >-->
+                    <!--<i class="tutu iconfont icon-shoujiqia">-->
+                        <!--选购手机</i>-->
+                    <!--<div class="l1"></div>-->
+                    <!--<div class="l2"></div>-->
+                <!--</li>-->
+                <!--<li><div class="l1"></div>-->
+                    <!--<div class="l2"></div></li>-->
+                <!--<li><div class="l2"></div></li>-->
+                <!--<li><div class="l1"></div></li>-->
+                <!--<li><div class="l1"></div></li>-->
+                <!--<li></li>-->
+            <!--</ul>-->
+        <!--</div>-->
+
+    <div class="english2">
+        <div class="english3"><img src="img/english.png" alt=""></div>
+        <div class="english3"><img src="img/english1.png" alt=""></div>
+        <div class="english5"><img src="img/english2.png" alt=""></div>
+    </div>
+</div>
+<!--闪购上端结束-->
 <!--小米闪购-->
 <div class="shopping">
     <div class="shoppinghead">
@@ -537,8 +606,10 @@
                       <div class="tjx3">小米8标准钢化玻璃膜</div>
                       <div class="tjx4">29元</div>
                       <div class="tjx5">546人评价</div>
-                      <p class="tanchu">呀套在手，天下我有</p>
                   </div>
+                  <div class="tanchu"><p class="">呀套在手，天下我有</p>
+                  </div>
+
               </div>
               <div class="tjx1">
                   <div class="tjx2">
@@ -856,8 +927,150 @@
               <div class="video5">一句话搞定手机复杂操作</div>
           </div>
       </div>
-
+  </div>
+   <div class="button">
+       <div class="button1">
+           <div class="button2">
+               <a href="">
+                   <i class="iconfont icon-weixiu"></i>
+                   预约维修服务
+               </a>
+           </div>
+           <div class="button2">
+               <a href="">
+                   <i class="iconfont icon-7"></i>
+                   七天无理由退货
+               </a>
+           </div>
+           <div class="button2">
+               <a href="">
+                   <i class="iconfont icon-tian"></i>
+                   15天免费换货
+               </a>
+           </div>
+           <div class="button2">
+               <a href="">
+                   <i class="iconfont icon-liwu"></i>
+                   满150元包邮
+               </a>
+           </div>
+           <div class="button3">
+               <a href="">
+                   <i class="iconfont icon-dingweiweizhizuobiaoxianxing"></i>
+                   520余家售后网点
+               </a>
+           </div>
+       </div>
+       <div class="redd">
+           <div class="button5">
+               <div class="button6">帮助中心</div>
+               <div class="button7">账户管理</div>
+               <div class="button8">购物指南</div>
+               <div class="button8">订单操作</div>
+           </div>
+           <div class="button5">
+               <div class="button6">服务支持</div>
+               <div class="button7">售后服务</div>
+               <div class="button8">自助服务</div>
+               <div class="button8">相关下载</div>
+           </div>
+           <div class="button5">
+               <div class="button6">线下门店</div>
+               <div class="button7">小米之家</div>
+               <div class="button8">服务网点</div>
+               <div class="button8">授权体验店</div>
+           </div>
+           <div class="button5">
+               <div class="button6">关于小米</div>
+               <div class="button7">了解小米</div>
+               <div class="button8">加入小米</div>
+               <div class="button8">投资者关系</div>
+           </div>
+           <div class="button5">
+               <div class="button6">关注我们</div>
+               <div class="button7">新浪微博</div>
+               <div class="button8">官方微信</div>
+               <div class="button8">联系我们</div>
+           </div>
+           <div class="button5">
+               <div class="button6">特色服务</div>
+               <div class="button7">F码通道</div>
+               <div class="button8">礼物码</div>
+               <div class="button8">防伪查询</div>
+           </div>
+           <div class="button9"></div>
+           <div class="buttonn">
+               <div class="buttonn1">400-100-5678</div>
+               <div class="buttonn2">周一至周日 8:00-18:00</div>
+               <div class="buttonn3">（仅收市话费）</div>
+               <div class="buttonn4">
+                   <a href="">
+                       <i class="iconfont icon-xiaoxi"></i>
+                       联系客服
+                   </a>
+               </div>
+               <div class="tanchu1"></div>
+           </div>
+       </div>
+   </div>
+      <div class="sos">
+          <div class="sos1">
+              <a href="">
+                  <img src="img/logo.png" alt="">
+              </a>
+              <p class="sos2">
+                  <a href="">小米商城</a><span class="sep">|</span>
+                  <a href="">MIUI</a><span class="sep">|</span>
+                  <a href="">米家</a><span class="sep">|</span>
+                  <a href="">米聊</a><span class="sep">|</span>
+                  <a href="">多看</a><span class="sep">|</span>
+                  <a href="">游戏</a><span class="sep">|</span>
+                  <a href="">路由器</a><span class="sep">|</span>
+                  <a href="">米粉卡</a><span class="sep">|</span>
+                  <a href="">政企服务</a><span class="sep">|</span>
+                  <a href="">小米天猫店</a><span class="sep">|</span>
+                  <a href="">隐私服务</a><span class="sep">|</span>
+                  <a href="">问题反馈</a><span class="sep">|</span>
+                  <a href="">廉政举报</a><span class="sep">|</span>
+                  <a href="">Select Region</a>
+              </p>
+              <p class="sos3">
+                  ©mi.com 京ICP证110507号 京ICP备10046444号 京公网安备11010802020134号 京网文[2017]1530-131号<br>
+                  违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+              </p>
+              <div class="sos4">
+                  <a href="">
+                      <img src="img/sos1.png" alt="">
+                  </a>
+                  <a href="">
+                      <img src="img/sos2.png" alt="">
+                  </a>
+                  <a href="">
+                      <img src="img/sos3.png" alt="">
+                  </a>
+                  <a href="">
+                      <img src="img/sos4.png" alt="">
+                  </a>
+                  <a href="">
+                      <img src="img/sos5.png" alt="">
+                  </a>
+              </div>
+          </div>
+          <div class="sos5">探索黑科技，小米为发烧而生！</div>
+      </div>
   </div>
 <!--视频结束-->
+      <div class="gps">
+          <div class="gps1">
+              <a href=""><i class="tubaio iconfont icon-xiaobiao- "></i></a>
+          </div>
+          <div class="gps1">
+              <a href=""><i class="tubaio iconfont icon-erji"></i></a>
+          </div>
+          <div class="gps1">
+              <a href=""><i class="tubaio iconfont icon-gouwuche"></i></a>
+          </div>
+      </div>
+
 </body>
 </html>
